이미지수정

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           <h2>ECD WEEKLY</h2>
           <p>팀원 업무내용</p>
           <div class="features">
-            <img class="size" src="./images/개인업무표.png" alt="" />
+            <img class="size" src="/images/weekly.png" alt="" />
 
             <!-- <section>
               <form method="post" action="#">
